# Arabella

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup-loopback.sh
arabella_mobile/: CMakeLists.txt  CMakePresets.json  arabella_mobile_plan.md  architecture.html  ios.html
arabella_mobile/platform/ios/: Arabella.entitlements  Info.plist  qtquickcontrols2.conf
arabella_mobile/protocol/: Cargo.toml  build.rs
arabella_mobile/protocol/examples/: connect.rs
arabella_mobile/protocol/include/: protocol.h
arabella_mobile/protocol/src/: client.rs  error.rs  ffi.rs  lib.rs  models.rs  packet.rs  param.rs  transport.rs
arabella_mobile/service/: CMakeLists.txt  DeviceHistory.cpp  DeviceHistory.h  DeviceService.cpp  DeviceService.h  DeviceWorker.cpp  DeviceWorker.h  DiscoveryService.cpp  DiscoveryService.h  ScenarioStore.cpp  ScenarioStore.h
arabella_mobile/service/tests/: CMakeLists.txt  stub_protocol.cpp  stub_protocol.h  tst_DeviceHistory.cpp  tst_DeviceService.cpp  tst_ScenarioStore.cpp
arabella_mobile/tests/: ffi_test.c  run_integration.sh
arabella_mobile/ui/: CMakeLists.txt  ConnectPage.qml  DashboardPage.qml  DetailsPage.qml  ScenarioPage.qml  SchedulePage.qml  main.cpp  main.qml
arabella_mobile/ui/components/: HumidityWidget.qml  ModeSelector.qml  PowerButton.qml  RpmDisplay.qml  SpeedControl.qml
arabella_mobile/viewmodel/: CMakeLists.txt  DeviceViewModel.cpp  DeviceViewModel.h  ScenarioViewModel.cpp  ScenarioViewModel.h  ScheduleViewModel.cpp  ScheduleViewModel.h
arabella_mobile/viewmodel/tests/: CMakeLists.txt  tst_DeviceViewModel.cpp  tst_ScenarioViewModel.cpp  tst_ScheduleViewModel.cpp
blauberg_vento/: __init__.py  client.py  exceptions.py  models.py  parameters.py  protocol.py  transport.py
dns/: Dockerfile  dnsmasq.conf
docs/: ROADMAP.md  TEST_CASES.md
tests/: test_history.py  test_main_window.py  test_protocol.py  test_scenarios.py  test_simulator.py
tests/webdashboard/: test_device_manager.py  test_hub.py  test_routers_commands.py  test_routers_devices.py  test_routers_scenarios.py
tests/webdashboard/e2e/: conftest.py  test_dashboard.py  test_fan_workflow.py
tools/: capture_packets.py
ventocontrol/: __init__.py  app.py  history.py  main.py  registry.py  scenarios.py  simulator.py
ventocontrol/controllers/: device_worker.py  poller.py
ventocontrol/ui/: connect_dialog.py  fan_details_dialog.py  main_window.py  rename_dialog.py  scenario_dialog.py  schedule_dialog.py
ventocontrol/widgets/: humidity_widget.py  mode_selector.py  power_button.py  rpm_display.py  speed_control.py  status_led.py
webdashboard/: __main__.py
webdashboard/backend/: dependencies.py  device_manager.py  hub.py  main.py  models.py
webdashboard/backend/routers/: commands.py  devices.py  scenarios.py
webdashboard/frontend/: index.html  package-lock.json  package.json  playwright.config.js
webdashboard/frontend/src/: App.css  App.jsx  api.js  theme.css
webdashboard/frontend/src/components/: ConnectDialog.css  ConnectDialog.jsx  DeviceHeader.css  DeviceHeader.jsx  FanDetailsModal.css  FanDetailsModal.jsx  HumidityControl.css  HumidityControl.jsx  ModeSelector.css  ModeSelector.jsx  PowerButton.css  PowerButton.jsx  QuickScenarios.css  QuickScenarios.jsx  RpmDisplay.css  RpmDisplay.jsx  SaveScenarioModal.css  SaveScenarioModal.jsx  ScenarioManager.css  ScenarioManager.jsx  ScheduleEditor.css  ScheduleEditor.jsx  SpeedControl.css  SpeedControl.jsx  StatusBar.css  StatusBar.jsx
webdashboard/frontend/tests/: connect.spec.js  controls.spec.js  fan-details.spec.js  helpers.js  scenarios.spec.js  schedule.spec.js
