[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name        = "blauberg-vento"
version     = "1.0.0"
description = "Python API for Blauberg Vento Expert Wi-Fi fans"
readme      = "README.md"
license     = { text = "MIT" }
requires-python = ">=3.11"
dependencies    = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=5.0",
       "httpx>=0.27", "pytest-playwright>=0.5"]
gui = ["PySide6>=6.6"]
web = ["fastapi>=0.111", "uvicorn[standard]>=0.29", "httpx>=0.27"]

[project.scripts]
ventocontrol = "ventocontrol.main:main"
ventosim     = "ventocontrol.simulator:main"

[tool.hatch.build.targets.wheel]
packages = ["blauberg_vento", "ventocontrol", "webdashboard"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]

[tool.coverage.run]
source = ["blauberg_vento"]
